# web-crawler

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code-review-skill.md  decisions.md  initial-brief.md  plan.md  review.md
src/web_crawler/: __init__.py  cli.py
src/web_crawler/crawler/: __init__.py  parser.py  rate_limiter.py  service.py
src/web_crawler/http/: __init__.py  client.py  settings.py
tests/integration/: test_crawl_integration.py
tests/unit/: test_cli.py  test_crawler_service.py  test_http_client.py  test_http_settings.py  test_parser.py  test_rate_limiter.py
